--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,7 @@
     <div class="header2">
       <br>
       <a href="/../" class="logo">Interstellar</a>
+      <p>Brought to you by <a href="https://github.com/py660">@py660</a></p>
       <div class="header2-right">
         <a href="web">Proxy</a>
         <a href="play">Games</a>
@@ -64,9 +65,6 @@
           </div>
           <br>
           <br>
-          <p class="text-center">
-            <iframe src="https://hub.alienhub.xyz/show?utm_medium=interstellar" title="Alienhub Advertisement" scrolling="no" width="450" height="150" frameborder="0"></iframe>
-          </p>
           <br>
           <br>
           <br>
