--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,6 @@
     <div class="header2">
       <br>
       <a href="/../" class="logo">Interstellar</a>
-      <p>Brought to you by <a href="https://github.com/py660">@py660</a></p>
       <div class="header2-right">
         <a href="web">Proxy</a>
         <a href="play">Games</a>
@@ -61,7 +60,7 @@
             <div class="title">
               <h1>Interstellar</h1>
             </div>
-            <button class="discord-btn2">Join our Discord</button>
+            <button class="discord-btn2">Brought to you by <a href="https://github.com/py660">@py660</a></button>
           </div>
           <br>
           <br>
@@ -72,9 +71,9 @@
         </div>
       </div>
       <script>
-        document.querySelector(".discord-btn2").addEventListener("click", () => {
-          window.open("https://discord.gg/gointerstellar", "_blank");
-        });
+        //document.querySelector(".discord-btn2").addEventListener("click", () => {
+        //  window.open("https://discord.gg/gointerstellar", "_blank");
+        //});
       </script>
       <script>
         if (localStorage.getItem('cloak')) {
