Update Firefox Link

--- a/static/apps.html
+++ b/static/apps.html
@@ -147,7 +147,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://replit.com/@cooleddie001/firefox?embed=true')">
+          <a class="game" onclick="go('https://replit.com/@cooleddie001/Firefox-Legacy?embed=true')">
             <img loading="lazy" src="/assets/images/icons/apps/firefox.png" style="border-radius: 25px;" />
           </a>
           <p3> Firefox Brower </p3>
@@ -204,7 +204,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <!--div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
           <a class="game" onclick="alert('It is currently not possible to add Instagram, The login feature will not work.')">
@@ -213,7 +213,7 @@
           <p3 style="color:red"> Instagram </p3>
         </div>
       </div>
-    </div>
+    </div-->
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
