--- a/static/index.html
+++ b/static/index.html
@@ -12,15 +12,6 @@
     <link rel="shortcut icon" href="assets/images/branding/in.png" type="image/x-icon">
     <link rel="stylesheet" href="resources/css/home.css"/>
     <link rel="stylesheet" href="assets/css/nav.css">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-WKJQ5QHQTJ');
-</script>
   </head>
   <body>
     <div class="header2">
@@ -28,8 +19,9 @@
       <a href="/../" class="logo">Interstellar</a>
       <div class="header2-right">
         <a href="web">Proxy</a>
-        <a href="play">Games</a>
-        <a href="apps">Apps</a>
+        <a href="https://play.cluster.ws/">Games</a>
+        <a href="play">Proxy-Exclusive Games</a>
+        <a href="apps">Apps & Chess</a>
         <a href="chat">Chatroom</a>
         <a href="settings">Settings</a>
       </div>
