Modify Section Links

--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,8 @@
         <a href="web">Proxy</a>
         <a href="https://play.cluster.ws/">Games</a>
         <a href="play">Proxy-Exclusive Games</a>
-        <a href="apps">Apps & Chess</a>
+        <a href="apps">Apps</a>
+        <a onclick="go('https://chess.com');">Chess.com</a>
         <a href="chat">Chatroom</a>
         <a href="settings">Settings</a>
       </div>
