Fix Chess.com link

--- a/static/index.html
+++ b/static/index.html
@@ -16,14 +16,14 @@
   <body>
     <div class="header2">
       <br>
-      <a href="/../" class="logo">Interstellar</a>
+      <a href="/web" class="logo">Interstellar</a>
       <div class="header2-right">
         <a href="web">Proxy</a>
         <a href="https://play.cluster.ws/">Games</a>
-        <a href="play">Proxy-Exclusive Games</a>
+        <a href="play">More Games</a>
         <a href="apps">Apps</a>
-        <a onclick="go('https://chess.com');">Chess.com</a>
-        <a href="chat">Chatroom</a>
+        <a onclick="apps">Chess.com</a>
+        <a href="chat">Chat</a>
         <a href="settings">Settings</a>
       </div>
     </div>
