Give up on chess

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
         <a href="https://play.cluster.ws/">Games</a>
         <a href="play">More Games</a>
         <a href="apps">Apps</a>
-        <a onclick="apps">Chess.com</a>
+        <!--a onclick="apps">Chess.com</a-->
         <a href="chat">Chat</a>
         <a href="settings">Settings</a>
       </div>
