--- a/static/index.html
+++ b/static/index.html
@@ -20,10 +20,10 @@
       <div class="header2-right">
         <a href="web">Proxy</a>
         <a href="https://play.cluster.ws/">Games</a>
-        <a href="play">More Games</a>
+        <a href="play">OG Games</a>
         <a href="apps">Apps</a>
         <!--a onclick="apps">Chess.com</a-->
-        <a href="chat">Chat</a>
+        <a href="chat">Chatroom</a>
         <a href="settings">Settings</a>
       </div>
     </div>
