--- a/static/apps.html
+++ b/static/apps.html
@@ -108,6 +108,28 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
+          <a onclick="go('https://chatgptbot.space')">
+          <!--a onclick="go('https://chatgpt-lite-ai.techwithanirudh.repl.co')"-->
+            <img loading="lazy" src="/assets/images/icons/chatgpt.png" style="border-radius: 25px;" />
+          </a>
+          <p3>ChatGPT 2</p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy">
+          <a onclick="go('https://chat.lmsys.org')">
+          <!--a onclick="go('https://chatgpt-lite-ai.techwithanirudh.repl.co')"-->
+            <img loading="lazy" src="/assets/images/icons/chatgpt.png" style="border-radius: 25px;" />
+          </a>
+          <p3>ChatGPT Backup</p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://www.coolmathgames.com/')">
             <img loading="lazy" src="/assets/images/icons/apps/coolmath.png" style="border-radius: 25px;" />
           </a>
