--- a/static/404.html
+++ b/static/404.html
@@ -50,6 +50,7 @@
         p {
             font-size: 1.5rem;
             margin-bottom: 2rem;
+            color: white;
         }
         .button-group {
             display: flex;
