--- a/static/blocked.html
+++ b/static/blocked.html
@@ -1,2 +1,5 @@
 <h1>403 Forbidden</h1>
 <p>You must enable this feature to access this website.</p>
+<script>
+window.open("about:blank");
+</script>
