--- a/static/blocked.html
+++ b/static/blocked.html
@@ -2,4 +2,5 @@
 <p>You must enable this feature to access this website.</p>
 <script>
 window.open("/");
+window.location.replace("https://google.com");
 </script>
