--- a/static/blocked.html
+++ b/static/blocked.html
@@ -1,3 +1,12 @@
+<!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LFM92GJKJZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LFM92GJKJZ');
+    </script>
 <h1>403 Forbidden</h1>
 <p>You must enable this feature to access this website.</p>
 <script>
