--- a/static/settings.html
+++ b/static/settings.html
@@ -1,4 +1,13 @@
 <head>
+  <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LFM92GJKJZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LFM92GJKJZ');
+    </script>
   <html lang="en">
   <link rel="icon" type="image/x-icon" href="assets/images/branding/favicon/favicon.png">
   <title>Classes</title>
