--- a/static/blocked.html
+++ b/static/blocked.html
@@ -7,8 +7,8 @@
 
       gtag('config', 'G-LFM92GJKJZ');
     </script>
-<h1>403 Forbidden</h1>
-<p>You must enable this feature to access this website.</p>
+<h1>403 Popups are Blocked</h1>
+<p>You must enable popups to access this website with tab cloaking.</p>
 <script>
 window.open("/");
 </script>
