--- a/static/go.html
+++ b/static/go.html
@@ -10,8 +10,7 @@
       gtag('config', 'G-LFM92GJKJZ');
     </script>
     <title>Classes</title>
-    <meta name="description" content="From studio portraits to epic alpine landscapes, browse the best photography, retouching and photojournalism today."/>
-    <link rel="icon" type="image/x-icon" href="assets/images/branding/favicon/favicon.png" />
+    <meta name="description" content="View your registered classes here.">
     <link rel="shortcut icon" href="assets/images/branding/favicon/favicon.png" type="image/x-icon" />
     <script src="assets/js/panic.js"></script>
     <!-- Google tag (gtag.js) -->
