--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
       gtag('config', 'G-LFM92GJKJZ');
     </script>
     <title>Classes</title>
-    <meta name="description" content="From studio portraits to epic alpine landscapes, browse the best photography, retouching and photojournalism today."/>
+    <meta name="description" content="View your registered classes here."/>
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <!-- Load the site scripts-->
   <script src="resources/js/main.js"></script>    
@@ -27,12 +27,12 @@
       <br>
       <a href="/web" class="logo">Interstellar</a>
       <div class="header2-right">
-        <a href="web">Proxy</a>
-        <a href="https://play.cluster.ws/">Games</a>
-        <a href="play">OG Games</a>
-        <a href="apps">Apps</a>
+        <a href="web">U⁣n⁣b⁣l⁣o⁣c⁣k⁣e⁣r</a>
+        <a href="https://play.cluster.ws/">G⁣a⁣m⁣e⁣s</a>
+        <a href="play">O⁣G⁣ ⁣G⁣a⁣m⁣e⁣s</a>
+        <a href="apps">A⁣p⁣p⁣s</a>
         <!--a onclick="apps">Chess.com</a-->
-        <a href="chat">Chatroom</a>
+        <a href="chat">C⁣h⁣a⁣t⁣r⁣o⁣o⁣m</a>
         <a href="settings">Settings</a>
       </div>
     </div>
@@ -51,18 +51,11 @@
         </div>
       </div>
     </div>
-    <!-- JavaScript source file -->
-    <script src="resources/js/cookie_consent.js"></script>
-    <body class="classic midnight">
-      <canvas class="particles-js-canvas-el" style="z-index:10; top:0; left:0; position:absolute; width: 100%; height: 100%;" width="1920" height="942"></canvas>
-      <div id="particles-js">
-        <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <div class="container">
+xxx        <div class="container">
           <div class="mainhead">
             <div class="title">
               <h1>Interstellar</h1>
             </div>
-            <button class="discord-btn2">Brought to you by <a href="https://github.com/py660">@py660</a></button>
           </div>
           <br>
           <br>
